fixed text alignment

--- a/ReactViteServer/src/App.css
+++ b/ReactViteServer/src/App.css
@@ -311,6 +311,7 @@
   flex-direction: column;
   justify-items: start;
   align-items: start;
+  padding-left: 10px;
 }
 
 .game_geometry {
@@ -331,6 +332,7 @@
 
 .user_count {
   margin: 0px !important;
+  padding-left: 10px;
   font-size: 250px;
   line-height: 250px;
 }
@@ -396,20 +398,27 @@
 .black_scroll::-webkit-scrollbar-thumb {
   background-color: #242424;
 }
+.text_question_wrapper {
+  height: 140px;
+  width: 1130px;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+  justify-content: end;
+}
 
 .question_title {
-  height: 140px;
+  max-height: 140px;
+  min-height: 45px;
   font-size: 36px;
-  line-height: 40px;
+  line-height: 44px;
   color: #242424;
   padding-left: 20px;
-  max-width: 1150px;
+  max-width: 1130px;
   z-index: 20;
   overflow-y: auto;
   overflow-x: hidden;
-  margin-bottom: 10px;
   text-align: start;
-  vertical-align: super;
 }
 
 .right_arrow.right_arrow {
@@ -488,6 +497,10 @@
 
 .space_top_timer {
   margin-top: 150px;
+  height: 640px;
+}
+.space_top_start {
+  margin-top: 90px;
   height: 640px;
 }
 
